--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node index.js"
+    "start:dev": "nodemon --exec babel-node index.js",
+    "start:dist": "webpack --mode production & node ./dist/main.js",
+    "start": "node main.js",  
+    "build": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +28,9 @@
     "@babel/node": "^7.22.19",
     "@babel/preset-env": "^7.23.7",
     "nodemon": "^3.0.2",
-    "swagger": "^0.7.5"
+    "swagger": "^0.7.5",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
   }
 }
