--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon --exec babel-node index.js",
     "start:dist": "webpack --mode production & node ./dist/main.js",
-    "start": "node main.js",  
-    "build": "webpack --mode production"
+    "start": "node main.js",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +27,7 @@
     "@babel/core": "^7.23.7",
     "@babel/node": "^7.22.19",
     "@babel/preset-env": "^7.23.7",
+    "babel-loader": "^9.1.3",
     "nodemon": "^3.0.2",
     "swagger": "^0.7.5",
     "webpack": "^5.89.0",
